--- a/app/src/main/res/drawable/rounded_corner_frame.xml
+++ b/app/src/main/res/drawable/rounded_corner_frame.xml
@@ -5,7 +5,7 @@
     <!-- The width and color of the border -->
     <stroke
         android:width="1dp"
-        android:color="#FFFFFF" />
+        android:color="@android:color/holo_blue_bright" />
 
     <!-- The corner radius, reduce it to make it more square -->
     <corners android:radius="30dp"/>
@@ -13,9 +13,9 @@
     <!-- Add your desired padding -->
     <padding
         android:left="10dp"
-        android:top="5dp"
+        android:top="2dp"
         android:right="10dp"
-        android:bottom="5dp" >
+        android:bottom="2dp" >
 
     </padding>
 </shape>
