--- a/app/src/main/res/layout/item_gps_location.xml
+++ b/app/src/main/res/layout/item_gps_location.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="2dp"
     android:layout_marginBottom="2dp"
+    android:layout_marginRight="10dp"
     android:background="@drawable/rounded_corner_frame"
     android:orientation="vertical">
 
@@ -15,22 +16,22 @@
         android:textColor="@android:color/holo_orange_dark"
         tools:text="Timestamp" />
 
-        <TextView
-            android:id="@+id/latitude_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/time_stamp_tv"
-            android:layout_alignParentStart="true"
-            android:textColor="@android:color/holo_blue_light"
-            tools:text="Latitude" />
+    <TextView
+        android:id="@+id/latitude_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/time_stamp_tv"
+        android:layout_alignParentStart="true"
+        android:textColor="@android:color/holo_blue_light"
+        tools:text="Latitude" />
 
-        <TextView
-            android:id="@+id/longitude_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@id/time_stamp_tv"
-            android:textColor="@android:color/holo_blue_light"
-            tools:text="Longitude" />
+    <TextView
+        android:id="@+id/longitude_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/time_stamp_tv"
+        android:layout_alignParentEnd="true"
+        android:textColor="@android:color/holo_blue_light"
+        tools:text="Longitude" />
 
 </RelativeLayout>
